tests/baselines/reference/parser512084.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512084.ts(2,1): error TS1005: '}' expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512084.ts (1 errors) ====
    class foo {
    
    
!!! error TS1005: '}' expected.
!!! related TS1007 tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512084.ts:1:11: The parser expected to find a '}' to match the '{' token here.